@@ -156,6 +156,22 @@ systemctl start network.service</screen>
    </para>
   </section>
 
+  <section>
+   <!-- bnc#898023 -->
+   <title>Warning: No Location for Bootloader Stage1 Selected</title>
+   <para>
+    During the initial installation, in the summary view of YaST, a
+    warning can appears bellow the bootloader section. This warning
+    says something like "Warning: No location for bootloader stage1
+    selected. Unless you know what are you doing please select above
+    location."
+   </para>
+   <para>
+    This warning is a bug in YaST (now fixed in Factory) and you can
+    safely ignore it.
+   </para>
+  </section>
+
  <section id="general">
   <title>General</title>
   <para/>
