@@ -3,6 +3,7 @@
   Manager" Icon Appears Twice (bnc#903243).
 - New entry: Missing Dependencies for virt-manager (bnc#901869).
 - New entry: Network After an Update With YaST (bnc#895447)
+- New entry: Warning: No Location for Bootloader Stage1 Selected (bnc#898023).
 
 13.2.20141030:
 - Update translations.
